syntax = "proto3";

option csharp_namespace = "Maris_Sorana_Lab9";

package greet;

// The greeting service definition.
service Greeter {
  rpc SendStatus (SRequest) returns (SResponse);
  rpc SayHello (HelloRequest) returns (HelloReply);
   rpc SendStatusSS (SRequest) returns (stream SResponse);
   rpc SendStatusCS (stream SRequest) returns (SResponse);
   rpc SendStatusBD (stream SRequest) returns (stream SResponse);
}

// Status request
message SRequest {
  int32 no = 1;
}

// Status response
message SResponse {
  repeated StatusInfo status_infos = 1; // Renamed field for clarity
}

// Status
message StatusInfo {
  string author = 1;
  string description = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}